// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UploadPhoto renders default state and disables submit 1`] = `
<div>
  <div
    class="sc-fPXMVh"
  >
    <div
      class=""
    />
    <form>
      <div
        class="sc-aXZVf cQAMzK"
      >
        <div
          class="sc-gEvEes erWXnv"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          Загрузить фото
        </div>
      </div>
      <div
        class="sc-eDPEui"
        style="--font-size-label: 0.78rem; --font-size-field-error: 0.72rem; --font-size-field-description: 0.8rem;"
      >
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
        <div
          class="sc-eldPxw dgLCQu"
        >
          <div
            class=""
          >
            <label
              class=""
              for="«r0»-control"
            >
              Заголовок
            </label>
            <input
              class=""
              id="photo-form-title"
              name="title"
              type="text"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r1»-control"
            >
              Приоритет
            </label>
            <input
              class=""
              id="photo-form-priority"
              name="priority"
              type="number"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r2»-control"
            >
              Страна
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-country"
                placeholder="Введите страну и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r3»-control"
            >
              Город
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-city"
                placeholder="Введите город и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r4»-control"
            >
              Теги
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-tags"
                placeholder="Введите тег и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <button
        class=""
        disabled=""
        style="--btn-bg: var(--text-muted);"
        type="submit"
      >
        Загрузить фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto shows error message when upload fails 1`] = `
<div>
  <div
    class="sc-fPXMVh"
  >
    <div
      class=""
    >
      Network error
    </div>
    <form>
      <div
        class="sc-aXZVf cQAMzK"
      >
        <div
          class="sc-gEvEes erWXnv"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-eDPEui"
        style="--font-size-label: 0.78rem; --font-size-field-error: 0.72rem; --font-size-field-description: 0.8rem;"
      >
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
        <div
          class="sc-eldPxw dgLCQu"
        >
          <div
            class=""
          >
            <label
              class=""
              for="«rp»-control"
            >
              Заголовок
            </label>
            <input
              class=""
              id="photo-form-title"
              name="title"
              type="text"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«rq»-control"
            >
              Приоритет
            </label>
            <input
              class=""
              id="photo-form-priority"
              name="priority"
              type="number"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«rr»-control"
            >
              Страна
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-country"
                placeholder="Введите страну и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«rs»-control"
            >
              Город
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-city"
                placeholder="Введите город и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«rt»-control"
            >
              Теги
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-tags"
                placeholder="Введите тег и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-gFqAkO fdwPkA"
      >
        <div
          class="sc-jlZhev hpHpHp"
        >
          <div
            class="sc-cwHptO hygRDn"
          >
            <div
              style="width: 100%; height: 100%; background: var(--input-disabled-color);"
            />
          </div>
          <div
            class="sc-jEACwF bePEmS"
          >
            <div
              class="sc-cPiKLY dsLOjA"
            >
              <span>
                photo.jpg
              </span>
              <span
                class="sc-dhKdcy kLtifp"
              >
                <span>
                  .
                </span>
                <span>
                  .
                </span>
                <span>
                  .
                </span>
              </span>
            </div>
            <span
              class="sc-imWYAH leAWOW"
            >
              image/jpeg
               · 
              4 B
               · Canon M50
               · 01.01.2020, 03:00:00
               · 1.000000, 2.000000 · 3m
            </span>
          </div>
          <button
            aria-label="Удалить файл photo.jpg"
            class="sc-dLMFT dNddn"
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <button
        class=""
        style="--btn-bg: var(--accent); --btn-hover-bg: var(--accent-hover);"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto updates label and shows selected file 1`] = `
<div>
  <div
    class="sc-fPXMVh"
  >
    <div
      class=""
    />
    <form>
      <div
        class="sc-aXZVf cQAMzK"
      >
        <div
          class="sc-gEvEes erWXnv"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-eDPEui"
        style="--font-size-label: 0.78rem; --font-size-field-error: 0.72rem; --font-size-field-description: 0.8rem;"
      >
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
        <div
          class="sc-eldPxw dgLCQu"
        >
          <div
            class=""
          >
            <label
              class=""
              for="«r5»-control"
            >
              Заголовок
            </label>
            <input
              class=""
              id="photo-form-title"
              name="title"
              type="text"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r6»-control"
            >
              Приоритет
            </label>
            <input
              class=""
              id="photo-form-priority"
              name="priority"
              type="number"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r7»-control"
            >
              Страна
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-country"
                placeholder="Введите страну и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r8»-control"
            >
              Город
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-city"
                placeholder="Введите город и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r9»-control"
            >
              Теги
            </label>
            <div
              class=""
            >
              <input
                class=""
                id="photo-form-tags"
                placeholder="Введите тег и нажмите Enter"
                type="text"
                value=""
              />
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-gFqAkO fdwPkA"
      >
        <div
          class="sc-jlZhev hpHpHp"
        >
          <div
            class="sc-cwHptO hygRDn"
          >
            <div
              style="width: 100%; height: 100%; background: var(--input-disabled-color);"
            />
          </div>
          <div
            class="sc-jEACwF bePEmS"
          >
            <div
              class="sc-cPiKLY dsLOjA"
            >
              <span>
                photo.jpg
              </span>
            </div>
            <span
              class="sc-imWYAH leAWOW"
            >
              image/jpeg
               · 
              4 B
               · Canon M50
               · 01.01.2020, 03:00:00
               · 1.000000, 2.000000 · 3m
            </span>
          </div>
          <button
            aria-label="Удалить файл photo.jpg"
            class="sc-dLMFT dNddn"
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <button
        class=""
        style="--btn-bg: var(--accent); --btn-hover-bg: var(--accent-hover);"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;
